[gd_scene load_steps=25 format=3 uid="uid://b2xw5r7i4t01k"]

[ext_resource type="Script" path="res://main.gd" id="1_81pjf"]
[ext_resource type="PackedScene" uid="uid://djaytk62f5dpi" path="res://ball.tscn" id="2_si7mk"]
[ext_resource type="AudioStream" uid="uid://n8pc1o3fyelo" path="res://Sounds/(Scaliball Level) game-176807.mp3" id="3_y4tq7"]
[ext_resource type="Texture2D" uid="uid://c7a61h0ktp68e" path="res://Sprites/Scale_Dirt_V2.png" id="4_ifcnb"]
[ext_resource type="Texture2D" uid="uid://fkagg7c480d" path="res://Sprites/Scale_Grass_Greyscale.png" id="5_5b27w"]
[ext_resource type="PackedScene" uid="uid://deuhuwroj2r0s" path="res://pin.tscn" id="6_2s3xs"]
[ext_resource type="FontFile" uid="uid://tulbp6yn0856" path="res://Matemasie-Regular.ttf" id="12_78jpe"]
[ext_resource type="PackedScene" uid="uid://cey5ol50wpm0a" path="res://finish.tscn" id="14_ycloq"]
[ext_resource type="Texture2D" uid="uid://bdkgkssyk1y1q" path="res://Sprites/Scale_Spike.png" id="15_3r0bk"]
[ext_resource type="Texture2D" uid="uid://oys2ccoprca" path="res://Sprites/Scale_Golden_Scale.png" id="16_0rdn5"]
[ext_resource type="Texture2D" uid="uid://bg0crn72ccy6k" path="res://Sprites/Scale_Slider_Pointer.png" id="17_cp4ui"]
[ext_resource type="Texture2D" uid="uid://b7nqwq2dmo3wi" path="res://Sprites/Scale_Slider.png" id="18_l41ef"]
[ext_resource type="Texture2D" uid="uid://b5ly2cc1dqiml" path="res://Sprites/Scale_Button_UI_Green.png" id="19_nby5i"]
[ext_resource type="Texture2D" uid="uid://ccmy4xvlguuqs" path="res://Sprites/Scale_Button_UI_Red.png" id="20_jn7wh"]
[ext_resource type="Texture2D" uid="uid://xr275odroguo" path="res://Sprites/Scale_BG.png" id="21_5mhwo"]
[ext_resource type="AudioStream" uid="uid://bqnsahsjk7u8q" path="res://Sounds/drawKnife1.ogg" id="22_ccpe3"]
[ext_resource type="AudioStream" uid="uid://btn07b52inexq" path="res://Sounds/drawKnife2.ogg" id="23_8mlpg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_othpu"]
size = Vector2(576, 57)

[sub_resource type="CircleShape2D" id="CircleShape2D_srnj2"]
radius = 25.0

[sub_resource type="CircleShape2D" id="CircleShape2D_5duww"]
radius = 29.2746

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3k47t"]
texture = ExtResource("18_l41ef")
texture_margin_top = 72.0
texture_margin_bottom = 7.0
draw_center = false

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_oewtq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_54p84"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_uvhyc"]
streams_count = 2
stream_0/stream = ExtResource("22_ccpe3")
stream_0/weight = 1.0
stream_1/stream = ExtResource("23_8mlpg")
stream_1/weight = 2.0

[node name="Main" type="Node2D"]
script = ExtResource("1_81pjf")
level = 2

[node name="Ball" parent="." instance=ExtResource("2_si7mk")]
position = Vector2(181, 189)

[node name="Camera2D" type="Camera2D" parent="Ball"]
zoom = Vector2(0.5, 0.5)
limit_left = -450
limit_right = 7840

[node name="Music" type="AudioStreamPlayer2D" parent="Ball"]
position = Vector2(-156, -216)
stream = ExtResource("3_y4tq7")
volume_db = -10.0
autoplay = true
attenuation = 7.51432e-05

[node name="Ground" type="StaticBody2D" parent="."]
position = Vector2(0, 126)
scale = Vector2(2, 2)
collision_layer = 3

[node name="Polygon2D" type="Polygon2D" parent="Ground"]
texture_repeat = 2
texture = ExtResource("4_ifcnb")
polygon = PackedVector2Array(44, -1019, 47, 56, 259, 99.5, 259, 279.5, 696, 220, 696, 503.5, 1147, 439.5, 1148.5, 567.5, 1810.5, 614.5, 1810, 412, 2393.5, 477.5, 2393.5, 191.5, 2883.5, 288, 2883.5, -115, 3376.5, -114.5, 3650.96, -55.969, 3826.5, -55.5, 3827, -285, 3655, -334, 3536.97, -244.198, 3370.41, -243.736, 3348, -719, 3967, -719, 3958, 1587, -278.5, 1570.5, -255.5, -1021.5)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Ground"]
visible = false
polygon = PackedVector2Array(44, -1019, 47, 56, 259, 99.5, 259, 279.5, 696, 220, 696, 503.5, 1147, 439.5, 1148.5, 567.5, 1810.5, 614.5, 1810, 412, 2393.5, 477.5, 2393.5, 191.5, 2883.5, 288, 2883.5, -115, 3376.5, -114.5, 3650.96, -55.969, 3826.5, -55.5, 3827, -285, 3655, -334, 3536.97, -244.198, 3370.41, -243.736, 3348, -719, 3967, -719, 3958, 1587, -278.5, 1570.5, -255.5, -1021.5)

[node name="Grass" type="Line2D" parent="Ground"]
modulate = Color(0, 0.615686, 0, 1)
z_index = 1
texture_repeat = 2
points = PackedVector2Array(44, -1019, 47, 56, 259, 99.5, 259, 279.5, 696, 220, 696, 503.5, 1147, 439.5, 1148.5, 567.5, 1810.5, 614.5, 1810, 412, 2393.5, 477.5, 2393.5, 191.5, 2883.5, 288, 2883.5, -115, 3376.5, -114.5, 3650.96, -55.969, 3826.5, -55.5, 3827, -285, 3655, -334, 3536.97, -244.198, 3370.41, -243.736, 3348, -719, 3967, -719, 3958, 1587, -278.5, 1570.5, -255.5, -1021.5)
width = 106.78
texture = ExtResource("5_5b27w")
texture_mode = 1

[node name="Stuff" type="Node2D" parent="."]

[node name="Pin" parent="Stuff" instance=ExtResource("6_2s3xs")]
position = Vector2(-1693, 1165)
mass = 50.0

[node name="Finish" parent="Stuff" instance=ExtResource("14_ycloq")]
position = Vector2(7427, -244)

[node name="Finish2" parent="Stuff" instance=ExtResource("14_ycloq")]
position = Vector2(7006, -1567)

[node name="Spikes" type="StaticBody2D" parent="Stuff"]
position = Vector2(-1722, 948)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Stuff/Spikes"]
position = Vector2(138, 20.5)
shape = SubResource("RectangleShape2D_othpu")

[node name="Spike" type="Sprite2D" parent="Stuff/Spikes"]
texture_repeat = 2
position = Vector2(-145, 24)
rotation = 3.14159
scale = Vector2(0.22, 0.22)
texture = ExtResource("15_3r0bk")

[node name="Spike2" type="Sprite2D" parent="Stuff/Spikes"]
texture_repeat = 2
position = Vector2(-80, 24)
rotation = 3.14159
scale = Vector2(0.22, 0.22)
texture = ExtResource("15_3r0bk")

[node name="Spike3" type="Sprite2D" parent="Stuff/Spikes"]
texture_repeat = 2
position = Vector2(-14, 24)
rotation = 3.14159
scale = Vector2(0.22, 0.22)
texture = ExtResource("15_3r0bk")

[node name="Spike4" type="Sprite2D" parent="Stuff/Spikes"]
texture_repeat = 2
position = Vector2(46, 24)
rotation = 3.14159
scale = Vector2(0.22, 0.22)
texture = ExtResource("15_3r0bk")

[node name="Spike5" type="Sprite2D" parent="Stuff/Spikes"]
texture_repeat = 2
position = Vector2(111, 24)
rotation = 3.14159
scale = Vector2(0.22, 0.22)
texture = ExtResource("15_3r0bk")

[node name="Spike6" type="Sprite2D" parent="Stuff/Spikes"]
texture_repeat = 2
position = Vector2(177, 24)
rotation = 3.14159
scale = Vector2(0.22, 0.22)
texture = ExtResource("15_3r0bk")

[node name="Spike7" type="Sprite2D" parent="Stuff/Spikes"]
texture_repeat = 2
position = Vector2(232, 24)
rotation = 3.14159
scale = Vector2(0.22, 0.22)
texture = ExtResource("15_3r0bk")

[node name="Spike8" type="Sprite2D" parent="Stuff/Spikes"]
texture_repeat = 2
position = Vector2(297, 24)
rotation = 3.14159
scale = Vector2(0.22, 0.22)
texture = ExtResource("15_3r0bk")

[node name="Spike9" type="Sprite2D" parent="Stuff/Spikes"]
texture_repeat = 2
position = Vector2(363, 24)
rotation = 3.14159
scale = Vector2(0.22, 0.22)
texture = ExtResource("15_3r0bk")

[node name="Spike10" type="Sprite2D" parent="Stuff/Spikes"]
texture_repeat = 2
position = Vector2(423, 24)
rotation = 3.14159
scale = Vector2(0.22, 0.22)
texture = ExtResource("15_3r0bk")

[node name="Collect" type="Area2D" parent="Stuff"]
position = Vector2(6787, -1396)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Stuff/Collect"]
scale = Vector2(0.38, 0.38)
texture = ExtResource("16_0rdn5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Stuff/Collect"]
position = Vector2(-17, 26)
shape = SubResource("CircleShape2D_srnj2")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Stuff/Collect"]
position = Vector2(-7, -10)
shape = SubResource("CircleShape2D_5duww")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Scale" type="HSlider" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -519.0
offset_top = 23.0
offset_right = 427.0
offset_bottom = 102.0
grow_horizontal = 2
theme_override_icons/grabber = ExtResource("17_cp4ui")
theme_override_icons/grabber_highlight = ExtResource("17_cp4ui")
theme_override_icons/grabber_disabled = ExtResource("17_cp4ui")
theme_override_styles/slider = SubResource("StyleBoxTexture_3k47t")
theme_override_styles/grabber_area = SubResource("StyleBoxEmpty_oewtq")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxEmpty_54p84")
min_value = 1.0
max_value = 10.0
step = 0.01
value = 1.0

[node name="Finish" type="VBoxContainer" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -124.0
offset_top = -147.0
offset_right = 124.0
offset_bottom = 147.0
grow_horizontal = 2
grow_vertical = 2

[node name="LevelComplete" type="RichTextLabel" parent="CanvasLayer/Finish"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("12_78jpe")
theme_override_font_sizes/normal_font_size = 26
text = "    Level Complete
"
fit_content = true

[node name="Time" type="RichTextLabel" parent="CanvasLayer/Finish"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("12_78jpe")
theme_override_font_sizes/normal_font_size = 20
text = "Time
"
fit_content = true

[node name="Rotation" type="RichTextLabel" parent="CanvasLayer/Finish"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("12_78jpe")
theme_override_font_sizes/normal_font_size = 20
text = "Rotation
"
fit_content = true

[node name="Collect" type="RichTextLabel" parent="CanvasLayer/Finish"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("12_78jpe")
theme_override_font_sizes/normal_font_size = 20
text = "Collect
"
fit_content = true

[node name="Back" type="TextureButton" parent="CanvasLayer/Finish"]
layout_mode = 2
texture_normal = ExtResource("19_nby5i")
texture_pressed = ExtResource("19_nby5i")
texture_hover = ExtResource("19_nby5i")

[node name="Reset" type="TextureButton" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -128.0
offset_top = 9.0
offset_right = 192.0
offset_bottom = 329.0
grow_horizontal = 0
scale = Vector2(0.32, 0.32)
texture_normal = ExtResource("20_jn7wh")
texture_pressed = ExtResource("20_jn7wh")
texture_hover = ExtResource("20_jn7wh")

[node name="ScaleBg" type="Sprite2D" parent="."]
modulate = Color(0.658824, 0.772549, 1, 1)
z_index = -1
position = Vector2(3686.62, -424.64)
scale = Vector2(6.60684, 10.5038)
texture = ExtResource("21_5mhwo")

[node name="AudioUI" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_uvhyc")
attenuation = 2.7504e-05

[connection signal="drag_started" from="CanvasLayer/Scale" to="." method="_on_scale_drag_started"]
[connection signal="value_changed" from="CanvasLayer/Scale" to="Ball" method="_on_scale_value_changed"]
[connection signal="button_down" from="CanvasLayer/Finish/Back" to="." method="menu"]
[connection signal="button_down" from="CanvasLayer/Reset" to="Ball" method="reset"]
