[gd_scene load_steps=32 format=3 uid="uid://cedlbmhib1ios"]

[ext_resource type="Script" uid="uid://bjfwi3utv1hqe" path="res://Scripts/main.gd" id="1_pgv06"]
[ext_resource type="Texture2D" uid="uid://cib2j6781ikfd" path="res://Sprites/Scale_BG_Night.png" id="2_at5v5"]
[ext_resource type="Texture2D" uid="uid://o3qv7ynpry20" path="res://Sprites/Scale_BG_Sunset.png" id="3_p5iq8"]
[ext_resource type="Texture2D" uid="uid://xr275odroguo" path="res://Sprites/Scale_BG.png" id="4_aa2gb"]
[ext_resource type="Texture2D" uid="uid://c7a61h0ktp68e" path="res://Sprites/Scale_Dirt_V2.png" id="5_su31b"]
[ext_resource type="PackedScene" uid="uid://djaytk62f5dpi" path="res://ball.tscn" id="6_bde7b"]
[ext_resource type="PhysicsMaterial" uid="uid://ckyro8x1w6ba6" path="res://GroundTypes/GroundMaterials/grass.tres" id="7_2gnlv"]
[ext_resource type="Script" uid="uid://ds73i3pb2yu3" path="res://Levels/ground.gd" id="8_wgt7v"]
[ext_resource type="Texture2D" uid="uid://fkagg7c480d" path="res://Sprites/Scale_Grass_Greyscale.png" id="9_sqe1u"]
[ext_resource type="Texture2D" uid="uid://btwijh3e6fy82" path="res://Sprites/Scale_Dirt_V4_Hard.png" id="10_e6ug8"]
[ext_resource type="PhysicsMaterial" uid="uid://b752oirktwt6w" path="res://GroundTypes/GroundMaterials/dull.tres" id="11_at5v5"]
[ext_resource type="PackedScene" uid="uid://cey5ol50wpm0a" path="res://Objects/finish.tscn" id="11_cy4vg"]
[ext_resource type="Texture2D" uid="uid://bdkgkssyk1y1q" path="res://Sprites/Scale_Spike.png" id="12_3bm78"]
[ext_resource type="Texture2D" uid="uid://oys2ccoprca" path="res://Sprites/Scale_Golden_Scale.png" id="13_y1p1i"]
[ext_resource type="Script" uid="uid://dhlmw650r176d" path="res://Scripts/Fan.gd" id="14_d3oxc"]
[ext_resource type="Texture2D" uid="uid://cwsjtstnffio2" path="res://Sprites/wall fan/Scale_Fan_T1_F1.png" id="15_goxl0"]
[ext_resource type="Texture2D" uid="uid://c7cmn43ka3anw" path="res://Sprites/wall fan/Scale_Fan_T1_F2.png" id="16_qckem"]
[ext_resource type="Texture2D" uid="uid://bratmrpxdnt1j" path="res://Sprites/wall fan/Scale_Fan_T1_F3.png" id="17_l8g48"]
[ext_resource type="Texture2D" uid="uid://cxyfeu6mko51d" path="res://Sprites/wall fan/Scale_Fan_T1_F4.png" id="18_5f0rt"]
[ext_resource type="Texture2D" uid="uid://cugcpnsveumge" path="res://Sprites/Scale_Wind_Particle_IDV.png" id="19_t1umq"]
[ext_resource type="AudioStream" uid="uid://dc56r4c7prvqy" path="res://Sounds/blow.mp3" id="20_8gyfq"]
[ext_resource type="PackedScene" uid="uid://deuhuwroj2r0s" path="res://Objects/pin.tscn" id="21_rcqx8"]
[ext_resource type="PackedScene" uid="uid://cxnla8n6oly6w" path="res://game_hud.tscn" id="22_kdsce"]

[sub_resource type="CircleShape2D" id="CircleShape2D_77423"]
radius = 200.0

[sub_resource type="CircleShape2D" id="CircleShape2D_x3bum"]
radius = 20.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jihuv"]
size = Vector2(414.008, 57)

[sub_resource type="CircleShape2D" id="CircleShape2D_etor8"]
radius = 25.0

[sub_resource type="CircleShape2D" id="CircleShape2D_8860t"]
radius = 29.2746

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c8778"]
size = Vector2(8097, 288)

[sub_resource type="SpriteFrames" id="SpriteFrames_ne40b"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("15_goxl0")
}, {
"duration": 1.0,
"texture": ExtResource("16_qckem")
}, {
"duration": 1.0,
"texture": ExtResource("17_l8g48")
}, {
"duration": 1.0,
"texture": ExtResource("18_5f0rt")
}],
"loop": true,
"name": &"new_animation",
"speed": 12.0
}]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_at5v5"]
particle_flag_disable_z = true
emission_shape_scale = Vector3(1, 1.34, 1)
emission_shape = 3
emission_box_extents = Vector3(1, 70, 1)
spread = 0.0
initial_velocity_min = 2550.0
initial_velocity_max = 2550.0
gravity = Vector3(0, 0, 0)

[node name="Main" type="Node2D"]
script = ExtResource("1_pgv06")
level = 6
level_name = "Pinball"

[node name="ScaleBgNight" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(3111, 890)
scale = Vector2(8.12891, 7.93403)
texture = ExtResource("2_at5v5")

[node name="ScaleBgSunset" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(9249.5, 3043.5)
scale = Vector2(6.88672, 6.41806)
texture = ExtResource("3_p5iq8")

[node name="ScaleBg" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(2451, 5269)
scale = Vector2(5.87578, 5.59861)
texture = ExtResource("4_aa2gb")

[node name="ScaleDirtV2" type="Sprite2D" parent="."]
modulate = Color(0.337255, 0.47451, 0.733333, 1)
z_index = -1
position = Vector2(6329, 1317.5)
scale = Vector2(39.5438, 14.3469)
texture = ExtResource("5_su31b")

[node name="Size Reference" type="Node2D" parent="."]
position = Vector2(8157, 7491)

[node name="Max" type="CollisionShape2D" parent="Size Reference"]
shape = SubResource("CircleShape2D_77423")
debug_color = Color(0, 0.701961, 0.0352941, 0.419608)

[node name="Min" type="CollisionShape2D" parent="Size Reference"]
shape = SubResource("CircleShape2D_x3bum")
debug_color = Color(0.701961, 0, 0, 0.419608)

[node name="Ball" parent="." instance=ExtResource("6_bde7b")]
position = Vector2(8168, 7528)

[node name="Camera2D" type="Camera2D" parent="Ball"]
zoom = Vector2(0.5, 0.5)
limit_left = -450
limit_right = 8455
position_smoothing_enabled = true
position_smoothing_speed = 12.0

[node name="Ground" type="Node2D" parent="."]
position = Vector2(0, 126)
scale = Vector2(2, 2)

[node name="ShapeA" type="StaticBody2D" parent="Ground"]
z_index = 1
collision_layer = 3
physics_material_override = ExtResource("7_2gnlv")
script = ExtResource("8_wgt7v")
live_edit = true

[node name="Grass" type="Line2D" parent="Ground/ShapeA"]
z_index = 1
texture_repeat = 2
points = PackedVector2Array(807.5, -218, 1181.5, -296.5, 1070.5, 629.5, 221.5, 458.5, 72, -225)
closed = true
width = 105.0
default_color = Color(0.176236, 0.652086, 0.171562, 1)
texture = ExtResource("9_sqe1u")
texture_mode = 1

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Ground/ShapeA"]
polygon = PackedVector2Array(807.5, -218, 1181.5, -296.5, 1070.5, 629.5, 221.5, 458.5, 72, -225)

[node name="Polygon2D" type="Polygon2D" parent="Ground/ShapeA"]
texture_repeat = 2
color = Color(1, 0.623, 0.42, 1)
texture = ExtResource("10_e6ug8")
polygon = PackedVector2Array(807.5, -218, 1181.5, -296.5, 1070.5, 629.5, 221.5, 458.5, 72, -225)

[node name="ShapeB" type="StaticBody2D" parent="Ground"]
z_index = 1
collision_layer = 3
physics_material_override = ExtResource("11_at5v5")
script = ExtResource("8_wgt7v")
live_edit = true
type = 1

[node name="Polygon2D2" type="Polygon2D" parent="Ground/ShapeB"]
texture_repeat = 2
color = Color(0.381259, 0.08641, 0.277879, 1)
texture = ExtResource("10_e6ug8")
polygon = PackedVector2Array(4088, -291, 4068, -323, 4040, -351, 4008, -371, 3968, -383, 3932, -383, 3904, -383, 3904, -575, 4320, -575, 4320, 3905, 1516, 3903, 1536, 3333, 3904, 3361, 3904, -331, 3936, -331, 3968, -323, 4000, -307, 4024, -287, 4040, -259, 4048, -223, 4048, -191, 4048, 3713, 4096, 3713, 4096, -223.157, 4096, -259)

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Ground/ShapeB"]
visible = false
polygon = PackedVector2Array(4088, -291, 4068, -323, 4040, -351, 4008, -371, 3968, -383, 3932, -383, 3904, -383, 3904, -575, 4320, -575, 4320, 3905, 1516, 3903, 1536, 3333, 3904, 3361, 3904, -331, 3936, -331, 3968, -323, 4000, -307, 4024, -287, 4040, -259, 4048, -223, 4048, -191, 4048, 3713, 4096, 3713, 4096, -223.157, 4096, -259)

[node name="Grass2" type="Line2D" parent="Ground/ShapeB"]
z_index = 1
texture_repeat = 2
points = PackedVector2Array(4088, -291, 4068, -323, 4040, -351, 4008, -371, 3968, -383, 3932, -383, 3904, -383, 3904, -575, 4320, -575, 4320, 3905, 1516, 3903, 1536, 3333, 3904, 3361, 3904, -331, 3936, -331, 3968, -323, 4000, -307, 4024, -287, 4040, -259, 4048, -223, 4048, -191, 4048, 3713, 4096, 3713, 4096, -223.157, 4096, -259)
closed = true
width = 5.0
default_color = Color(0, 0.00784314, 1, 1)
texture_mode = 1

[node name="Stuff" type="Node2D" parent="."]

[node name="Finish" parent="Stuff" instance=ExtResource("11_cy4vg")]
position = Vector2(4720, -1272)

[node name="Spikes" type="StaticBody2D" parent="Stuff"]
position = Vector2(2846, 1743)
rotation = -3.14108
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Stuff/Spikes"]
position = Vector2(47.0156, 20.5001)
shape = SubResource("RectangleShape2D_jihuv")

[node name="Spike" type="Sprite2D" parent="Stuff/Spikes"]
texture_repeat = 2
position = Vector2(-145, 24)
rotation = 3.14159
scale = Vector2(0.22, 0.22)
texture = ExtResource("12_3bm78")

[node name="Spike2" type="Sprite2D" parent="Stuff/Spikes"]
texture_repeat = 2
position = Vector2(-80, 24)
rotation = 3.14159
scale = Vector2(0.22, 0.22)
texture = ExtResource("12_3bm78")

[node name="Spike3" type="Sprite2D" parent="Stuff/Spikes"]
texture_repeat = 2
position = Vector2(-14, 24)
rotation = 3.14159
scale = Vector2(0.22, 0.22)
texture = ExtResource("12_3bm78")

[node name="Spike4" type="Sprite2D" parent="Stuff/Spikes"]
texture_repeat = 2
position = Vector2(46, 24)
rotation = 3.14159
scale = Vector2(0.22, 0.22)
texture = ExtResource("12_3bm78")

[node name="Spike5" type="Sprite2D" parent="Stuff/Spikes"]
texture_repeat = 2
position = Vector2(111, 24)
rotation = 3.14159
scale = Vector2(0.22, 0.22)
texture = ExtResource("12_3bm78")

[node name="Spike6" type="Sprite2D" parent="Stuff/Spikes"]
texture_repeat = 2
position = Vector2(177, 24)
rotation = 3.14159
scale = Vector2(0.22, 0.22)
texture = ExtResource("12_3bm78")

[node name="Spike7" type="Sprite2D" parent="Stuff/Spikes"]
texture_repeat = 2
position = Vector2(232, 24)
rotation = 3.14159
scale = Vector2(0.22, 0.22)
texture = ExtResource("12_3bm78")

[node name="Spikes2" type="StaticBody2D" parent="Stuff"]
position = Vector2(2370, 2825)
rotation = -3.14108
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Stuff/Spikes2"]
position = Vector2(236.511, 20.5)
shape = SubResource("RectangleShape2D_jihuv")

[node name="Spike4" type="Sprite2D" parent="Stuff/Spikes2"]
texture_repeat = 2
position = Vector2(46, 24)
rotation = 3.14159
scale = Vector2(0.22, 0.22)
texture = ExtResource("12_3bm78")

[node name="Spike5" type="Sprite2D" parent="Stuff/Spikes2"]
texture_repeat = 2
position = Vector2(111, 24)
rotation = 3.14159
scale = Vector2(0.22, 0.22)
texture = ExtResource("12_3bm78")

[node name="Spike6" type="Sprite2D" parent="Stuff/Spikes2"]
texture_repeat = 2
position = Vector2(177, 24)
rotation = 3.14159
scale = Vector2(0.22, 0.22)
texture = ExtResource("12_3bm78")

[node name="Spike7" type="Sprite2D" parent="Stuff/Spikes2"]
texture_repeat = 2
position = Vector2(232, 24)
rotation = 3.14159
scale = Vector2(0.22, 0.22)
texture = ExtResource("12_3bm78")

[node name="Spike8" type="Sprite2D" parent="Stuff/Spikes2"]
texture_repeat = 2
position = Vector2(297, 24)
rotation = 3.14159
scale = Vector2(0.22, 0.22)
texture = ExtResource("12_3bm78")

[node name="Spike9" type="Sprite2D" parent="Stuff/Spikes2"]
texture_repeat = 2
position = Vector2(363, 24)
rotation = 3.14159
scale = Vector2(0.22, 0.22)
texture = ExtResource("12_3bm78")

[node name="Spike10" type="Sprite2D" parent="Stuff/Spikes2"]
texture_repeat = 2
position = Vector2(423, 24)
rotation = 3.14159
scale = Vector2(0.22, 0.22)
texture = ExtResource("12_3bm78")

[node name="Spikes3" type="StaticBody2D" parent="Stuff"]
position = Vector2(1331, 2189)
rotation = 4.71239
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Stuff/Spikes3"]
position = Vector2(138, 20.5)
shape = SubResource("RectangleShape2D_jihuv")

[node name="Spike" type="Sprite2D" parent="Stuff/Spikes3"]
texture_repeat = 2
position = Vector2(-145, 24)
rotation = 3.14159
scale = Vector2(0.22, 0.22)
texture = ExtResource("12_3bm78")

[node name="Spike2" type="Sprite2D" parent="Stuff/Spikes3"]
texture_repeat = 2
position = Vector2(-80, 24)
rotation = 3.14159
scale = Vector2(0.22, 0.22)
texture = ExtResource("12_3bm78")

[node name="Spike3" type="Sprite2D" parent="Stuff/Spikes3"]
texture_repeat = 2
position = Vector2(-14, 24)
rotation = 3.14159
scale = Vector2(0.22, 0.22)
texture = ExtResource("12_3bm78")

[node name="Spike4" type="Sprite2D" parent="Stuff/Spikes3"]
texture_repeat = 2
position = Vector2(46, 24)
rotation = 3.14159
scale = Vector2(0.22, 0.22)
texture = ExtResource("12_3bm78")

[node name="Spike5" type="Sprite2D" parent="Stuff/Spikes3"]
texture_repeat = 2
position = Vector2(111, 24)
rotation = 3.14159
scale = Vector2(0.22, 0.22)
texture = ExtResource("12_3bm78")

[node name="Spike6" type="Sprite2D" parent="Stuff/Spikes3"]
texture_repeat = 2
position = Vector2(177, 24)
rotation = 3.14159
scale = Vector2(0.22, 0.22)
texture = ExtResource("12_3bm78")

[node name="Spike7" type="Sprite2D" parent="Stuff/Spikes3"]
texture_repeat = 2
position = Vector2(232, 24)
rotation = 3.14159
scale = Vector2(0.22, 0.22)
texture = ExtResource("12_3bm78")

[node name="Spike8" type="Sprite2D" parent="Stuff/Spikes3"]
texture_repeat = 2
position = Vector2(297, 24)
rotation = 3.14159
scale = Vector2(0.22, 0.22)
texture = ExtResource("12_3bm78")

[node name="Spike9" type="Sprite2D" parent="Stuff/Spikes3"]
texture_repeat = 2
position = Vector2(363, 24)
rotation = 3.14159
scale = Vector2(0.22, 0.22)
texture = ExtResource("12_3bm78")

[node name="Spike10" type="Sprite2D" parent="Stuff/Spikes3"]
texture_repeat = 2
position = Vector2(423, 24)
rotation = 3.14159
scale = Vector2(0.22, 0.22)
texture = ExtResource("12_3bm78")

[node name="Collect" type="Area2D" parent="Stuff"]
position = Vector2(3963, -923)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Stuff/Collect"]
scale = Vector2(0.38, 0.38)
texture = ExtResource("13_y1p1i")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Stuff/Collect"]
position = Vector2(-17, 26)
shape = SubResource("CircleShape2D_etor8")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Stuff/Collect"]
position = Vector2(-7, -10)
shape = SubResource("CircleShape2D_8860t")

[node name="Fan" type="Area2D" parent="Stuff"]
position = Vector2(8159, 7686)
rotation = 4.71239
collision_layer = 5
collision_mask = 4
gravity_point_center = Vector2(0, -1)
gravity_direction = Vector2(0, -1)
gravity = 1000.0
script = ExtResource("14_d3oxc")
power = 10000
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Stuff/Fan"]
position = Vector2(3895.5, 59)
shape = SubResource("RectangleShape2D_c8778")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Stuff/Fan"]
position = Vector2(-2, 63)
sprite_frames = SubResource("SpriteFrames_ne40b")
animation = &"new_animation"
frame_progress = 0.475421

[node name="GPUParticles2D" type="GPUParticles2D" parent="Stuff/Fan"]
position = Vector2(-52.9999, 53)
amount = 120
texture = ExtResource("19_t1umq")
lifetime = 3.13608
preprocess = 3.13608
visibility_rect = Rect2(-60, -140, 8057, 288)
process_material = SubResource("ParticleProcessMaterial_at5v5")

[node name="Audio" type="AudioStreamPlayer2D" parent="Stuff/Fan"]
stream = ExtResource("20_8gyfq")
attenuation = 1e-05

[node name="Pin" parent="Stuff" instance=ExtResource("21_rcqx8")]
position = Vector2(4252, -1428)
mass = 20.0

[node name="GameHUD" parent="." instance=ExtResource("22_kdsce")]

[connection signal="body_entered" from="Stuff/Fan" to="Stuff/Fan" method="_on_body_entered"]
